--- a/jd/list.html
+++ b/jd/list.html
@@ -97,10 +97,72 @@
     <div class="w">
         <div class="img"><img src="./uploads/bg_03.png" alt=""></div>
         <div class="container-item">
-            <img src="./uploads/iphone.png" alt="">
-            <div class="text-one">
-                Apple苹果iPhone 6s P1us(A1699) 32G 金色 移动联通电信4G手机
+            <a href="detail.html">
+                <img src="./uploads/iphone.png" alt="">
+                <div class="text-one">
+                    Apple苹果iPhone 6s P1us(A1699) 32G 金色 移动联通电信4G手机
+                </div>
+            </a>
+            <div class="nums">
+                <div class="nums-one">¥6088</div>
+                <s class="nums-two">¥ 6988</s>
             </div>
+            <div class="text-two">
+                <span>己售87%</span>
+                <img src="./uploads/status.png" alt="">
+                剩余<em>29</em>件
+            </div>
+            <div class="right-now">
+                <span>立即抢购</span>
+            </div>
+        </div>
+        <div class="container-item">
+            <a href="detail.html">
+                <img src="./uploads/iphone.png" alt="">
+                <div class="text-one">
+                    Apple苹果iPhone 6s P1us(A1699) 32G 金色 移动联通电信4G手机
+                </div>
+            </a>
+            <div class="nums">
+                <div class="nums-one">¥6088</div>
+                <s class="nums-two">¥ 6988</s>
+            </div>
+            <div class="text-two">
+                <span>己售87%</span>
+                <img src="./uploads/status.png" alt="">
+                剩余<em>29</em>件
+            </div>
+            <div class="right-now">
+                <span>立即抢购</span>
+            </div>
+        </div>
+        <div class="container-item">
+            <a href="detail.html">
+                <img src="./uploads/iphone.png" alt="">
+                <div class="text-one">
+                    Apple苹果iPhone 6s P1us(A1699) 32G 金色 移动联通电信4G手机
+                </div>
+            </a>
+            <div class="nums">
+                <div class="nums-one">¥6088</div>
+                <s class="nums-two">¥ 6988</s>
+            </div>
+            <div class="text-two">
+                <span>己售87%</span>
+                <img src="./uploads/status.png" alt="">
+                剩余<em>29</em>件
+            </div>
+            <div class="right-now">
+                <span>立即抢购</span>
+            </div>
+        </div>
+        <div class="container-item">
+            <a href="detail.html">
+                <img src="./uploads/iphone.png" alt="">
+                <div class="text-one">
+                    Apple苹果iPhone 6s P1us(A1699) 32G 金色 移动联通电信4G手机
+                </div>
+            </a>
             <div class="nums">
                 <div class="nums-one">¥6088</div>
                 <s class="nums-two">¥ 6988</s>
@@ -330,60 +392,7 @@
                 <span>立即抢购</span>
             </div>
         </div>
-        <div class="container-item">
-            <img src="./uploads/iphone.png" alt="">
-            <div class="text-one">
-                Apple苹果iPhone 6s P1us(A1699) 32G 金色 移动联通电信4G手机
-            </div>
-            <div class="nums">
-                <div class="nums-one">¥6088</div>
-                <s class="nums-two">¥ 6988</s>
-            </div>
-            <div class="text-two">
-                <span>己售87%</span>
-                <img src="./uploads/status.png" alt="">
-                剩余<em>29</em>件
-            </div>
-            <div class="right-now">
-                <span>立即抢购</span>
-            </div>
-        </div>
-        <div class="container-item">
-            <img src="./uploads/iphone.png" alt="">
-            <div class="text-one">
-                Apple苹果iPhone 6s P1us(A1699) 32G 金色 移动联通电信4G手机
-            </div>
-            <div class="nums">
-                <div class="nums-one">¥6088</div>
-                <s class="nums-two">¥ 6988</s>
-            </div>
-            <div class="text-two">
-                <span>己售87%</span>
-                <img src="./uploads/status.png" alt="">
-                剩余<em>29</em>件
-            </div>
-            <div class="right-now">
-                <span>立即抢购</span>
-            </div>
-        </div>
-        <div class="container-item">
-            <img src="./uploads/iphone.png" alt="">
-            <div class="text-one">
-                Apple苹果iPhone 6s P1us(A1699) 32G 金色 移动联通电信4G手机
-            </div>
-            <div class="nums">
-                <div class="nums-one">¥6088</div>
-                <s class="nums-two">¥ 6988</s>
-            </div>
-            <div class="text-two">
-                <span>己售87%</span>
-                <img src="./uploads/status.png" alt="">
-                剩余<em>29</em>件
-            </div>
-            <div class="right-now">
-                <span>立即抢购</span>
-            </div>
-        </div>
+
     </div>
 </div>
 <!-- 底部 -->
